refactor(openreac): share targetV update logic across regulated elements
Signed-off-by: lamoletoscar <lamoletoscar@proton.me>